--- a/SecureWebApiSample/appsettings.json
+++ b/SecureWebApiSample/appsettings.json
@@ -1,12 +1,12 @@
 {
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
-    "Domain": "marciosoaresviterbocom.onmicrosoft.com",
-    "TenantId": "d914225b-6ecb-4950-bcbc-8634a3d4acd3",
-    "ClientId": "2e840939-c614-42de-88db-acca4daf27f7",
+    "Domain": "[REPLACE-WITH-YOUR-VALUE]",
+    "TenantId": "[REPLACE-WITH-YOUR-VALUE]",
+    "ClientId": "[REPLACE-WITH-YOUR-VALUE]",
     "CallbackPath": "/signin-oidc",
     "Scopes": "access_as_user",
-    "ClientSecret": "AvanadeMauiMsalAuth Secret",
+    "ClientSecret": "[REPLACE-WITH-YOUR-VALUE]",
     "ClientCertificates": []
   },
   "Logging": {
